Trying to get this to work

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Le styles -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="https://raw.github.com/marcoceppi/bootstrap-glyphicons/master/bootstrap.icon-large.min.css" rel="stylesheet">
+    <link href="css/bootstrap.icon-large.min.css" rel="stylesheet">
     <link href="http://twitter.github.com/bootstrap/assets/css/docs.css" rel="stylesheet">
     <style type="text/css">
     body { background-position: 0 0; padding-top: 30px; }
