Cleaned up the icon lists

--- a/index.html
+++ b/index.html
@@ -430,15 +430,15 @@
 		<li><i class="icon-large icon-circle-minus"></i> icon-circle-minus</li>
 		<li><i class="icon-large icon-minus-sign"></i> icon-minus-sign</li>
 		<li><i class="icon-large icon-circle-remove"></i> icon-circle-remove</li>
+		</ul>
+	</div>
+    <div class="span3">
+      <ul class="the-icons">
 		<li><i class="icon-large icon-remove-sign"></i> icon-remove-sign</li>
 		<li><i class="icon-large icon-circle-ok"></i> icon-circle-ok</li>
 		<li><i class="icon-large icon-ok-sign"></i> icon-ok-sign</li>
 		<li><i class="icon-large icon-circle-question-mark"></i> icon-circle-question-mark</li>
 		<li><i class="icon-large icon-question-sign"></i> icon-question-sign</li>
-		</ul>
-	</div>
-    <div class="span3">
-      <ul class="the-icons">
 		<li><i class="icon-large icon-circle-info"></i> icon-circle-info</li>
 		<li><i class="icon-large icon-info-sign"></i> icon-info-sign</li>
 		<li><i class="icon-large icon-circle-exclamation-mark"></i> icon-circle-exclamation-mark</li>
@@ -550,6 +550,10 @@
 	</div>
     <div class="span3">
       <ul class="the-icons">
+		<li><i class="icon-large icon-grater"></i> icon-grater</li>
+		<li><i class="icon-large icon-kettle"></i> icon-kettle</li>
+		<li><i class="icon-large icon-hospital"></i> icon-hospital</li>
+		<li><i class="icon-large icon-hospital-h"></i> icon-hospital-h</li>
 		<li><i class="icon-large icon-microphone"></i> icon-microphone</li>
 		<li><i class="icon-large icon-webcam"></i> icon-webcam</li>
 		<li><i class="icon-large icon-temple-christianity-church"></i> icon-temple-christianity-church</li>
