Added some more data

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/bootstrap.icon-large.min.css" rel="stylesheet">
     <link href="http://twitter.github.com/bootstrap/assets/css/docs.css" rel="stylesheet">
     <style type="text/css">
-    body { background-position: 0 0; padding-top: 30px; }
+    body { background-position: 0 0; background-image: none; padding-top: 30px; }
     section { padding-top: 25px; }
     ul.the-icons li { font-size: 18px; vertical-align: middle; padding-bottom: 10px; }
     
@@ -46,8 +46,22 @@
   <p class="lead">Because sometimes you need a little more than 12x12 icons for your projects.</p>
 </header>
 
-<!-- Icons
-================================================== -->
+<section id="download">
+  <div class="page-header">
+    <h1><a href="http://github.com/marcoceppi/bootstrap-glyphicons">We're on Github <i class="icon-large icon-github"></i></a></h1>
+  </div>
+<!--
+  <div class="row">
+    <div class="span12">
+      <div class="hero-unit">
+        <h3><a href="http://github.com/marcoceppi/bootstrap-glyphicons">We're on Github <i class="icon-large icon-github"></i></a></h3>
+        <p>Fork us, push us, do whatever it is you kids do on the Github.</p>
+      </div>
+    </div>
+  </div>
+-->
+</section>
+
 <section id="icons">
   <div class="page-header">
     <h1>Halfling Icons <small>Graciously provided by <a href="http://glyphicons.com" target="_blank">Glyphicons</a></small></h1>
