--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 
 <section id="download">
   <div class="page-header">
-    <h1><a href="http://github.com/marcoceppi/bootstrap-glyphicons">We're on Github <i class="icon-large icon-github"></i></a></h1>
+    <h1><a href="http://github.com/marcoceppi/bootstrap-glyphicons">We're on Github <i class="icon-large icon-github"></i></a> <small>Fork us, push us, do whatever it is you kids do on the Github.</small></h1>
   </div>
 <!--
   <div class="row">
     <div class="span12">
       <div class="hero-unit">
         <h3><a href="http://github.com/marcoceppi/bootstrap-glyphicons">We're on Github <i class="icon-large icon-github"></i></a></h3>
-        <p>Fork us, push us, do whatever it is you kids do on the Github.</p>
+        <p></p>
       </div>
     </div>
   </div>
