--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <section id="download">
   <div class="page-header">
-    <h1><a href="http://github.com/marcoceppi/bootstrap-glyphicons">We're on Github <i class="icon-large icon-github"></i></a> <small>Fork us, push us, do whatever it is you kids do on the Github.</small></h1>
+    <h1><i class="icon-large icon-github"></i> <a href="http://github.com/marcoceppi/bootstrap-glyphicons">We're on Github</a> <small>Fork us, push us, do whatever it is you kids do on the Github.</small></h1>
   </div>
 <!--
   <div class="row">
